feat: 完成多模块功能迭代与优化
本次提交包含多维度改进：
1. 前端优化：
   - 为多处图片添加loading="lazy"懒加载属性
   - 替换硬编码的系统审批人文案为国际化配置
   - 实现路由缓存功能，新增app store缓存视图管理
   - 重构ErrorBoundary组件，优化开发环境错误展示逻辑
   - 采购单页面全面国际化改造，替换硬编码文本
2. 后端优化：
   - 重构权限服务、角色服务单元测试，使用断言库优化测试代码
   - 新增立项服务单元测试，覆盖核心业务流程
   - 优化测试类结构，使用@Nested分组测试场景